# ECUtool

./: .gitignore  .gitmodules  ACKNOWLEDGEMENTS  CMakeLists.txt  LICENSE  README.md  vcpkg.json
ECUtool/: CMakeLists.txt  main.cpp  main.hpp
ECUtool/communication/: CMakeLists.txt  Connection.hpp  DataLinkMessage.hpp  DataMessage.hpp  KLineConnection.cpp  KLineConnection.hpp  KLineConnectionPOSIX.cpp  KLineConnectionWIN32.cpp  KLineWindows.cpp  KLineWindows.hpp  KWP2000DL.cpp  KWP2000DL.hpp  KWP2000GRC.cpp  KWP2000GRC.hpp  KWP2000_Message.cpp  KWP2000_Message.hpp  Message.hpp  SerialConnection.hpp  VecStream.hpp
ECUtool/core/: Buffer.hpp  CMakeLists.txt  Command.hpp  CommandExecutor.cpp  CommandExecutor.hpp  DiagnosticSession.cpp  DiagnosticSession.hpp  Logger.hpp  Message.hpp  RawCommand.cpp  RawCommand.hpp  ScriptCommand.hpp
ECUtool/ui/: CMakeLists.txt  ConnectFrame.cpp  ConnectFrame.hpp  ECUapp.cpp  ECUapp.hpp  PortNames.hpp  RootFrame.cpp  RootFrame.hpp  commanddelegate.h  commandmodel.cpp  commandmodel.h  commandnew.cpp  commandnew.h  commandnew.ui  commandview.cpp  commandview.h  createconnectiondialog.cpp  createconnectiondialog.h  createconnectiondialog.ui  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  messagedelegate.h  messagemodel.h  messageview.h
ECUtool/ui/icons/: CMakeLists.txt  icons.h  icons.hpp  icons.qrc
ecutool_projects/bosch_abs_kwp1281_proprietary/commands/: GetErrorCodes.json  StartCommunication.json  TesterPresent.json
ecutool_projects/bosch_abs_kwp1281_proprietary/globals/: globalvars.lua  kwp1281_datalink.lua
ecutool_projects/bosch_abs_kwp1281_proprietary/scripts/: GetErrorCodes.lua  StartCommunication.lua  TesterPresent.lua
ecutool_projects/mems3/commands/: DumpECUStrings.json  ECUReset.json  ReadConfig.json  ReadECUStrings.json  ReadLocalID.json  ReadMemory.json  SecurityAccess.json  SendPayload.json  StartDiagnosticSession.json  StopDiagnosticSession.json  TestForK2Services.json  TesterPresent.json
ecutool_projects/mems3/globals/: ecu_specific_global.lua  kwp2000_application.lua  kwp2000_datalink.lua  kwp2000_helpers.lua  kwp2000_services.lua
ecutool_projects/mems3/scripts/: DumpECUStrings.lua  ECUReset.lua  ReadConfig.lua  ReadECUStrings.lua  ReadLocalID.lua  ReadMemory.lua  SecurityAccess.lua  SendPayload.lua  StartCommunication.lua  StartDiagnosticSession.lua  StopDiagnosticSession.lua  TestForK2Services.lua  TesterPresent.lua
