target_sources(ecutoolapp PRIVATE "mainwindow.cpp" "mainwindow.hpp" "mainwindow.ui"
"createconnectiondialog.cpp" "createconnectiondialog.h" "createconnectiondialog.ui" "PortNames.hpp"
"commandmodel.cpp" "commandmodel.h" "commanddelegate.h"
"commandview.h" "commandnew.cpp" "commandnew.h" "commandnew.ui")

add_subdirectory(icons)
